# llamaindex_demo

./: .gitignore  CLAUDE.md  DOCUMENT_PROCESSOR.md  READER_TEST_REPORT.md  README.md  main.py  pyproject.toml  run_server.py  settings.py  start.sh
backend/app/: config.py  dependencies.py  logger.py  main.py  models.py
backend/app/api/: chat.py  files.py
backend/app/services/: agent_service.py  document_processor.py  vector_store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-message.tsx  chat.tsx  file-list.tsx  file-upload.tsx
frontend/components/ui/: dropdown-menu.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: api-config.ts
frontend/static/: app.js
frontend_old/: index.html
